<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_name_profile"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_input_name_profile"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_vehicle_type"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/spinnerVehicleType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>